# ennshuu

./: .gitignore
imgProc/01/inputImgFile/: CMakeLists.txt  inputImgFile.cpp
imgProc/02/imgWaku/: imgWaku.cpp
imgProc/02/kadai2/: CMakeLists.txt  kadai2.cpp
imgProc/02/pixelScan/: CMakeLists.txt  pixelScan.cpp
imgProc/03/negaposi/: CMakeLists.txt
imgProc/03/posterization/: CMakeLists.txt  posterization.cpp
imgProc/04/contrast/: contrast.cpp
imgProc/04/hist/: CMakeLists.txt  hist.cpp
imgProc/04/kadai1/: 04_01_k23023.cpp  CMakeLists.txt
imgProc/04/kadai2/: 04_023_k23023.txt  CMakeLists.txt
imgProc/05/ave_filter/: CMakeLists.txt  ave_filter.cpp
imgProc/05/filter2D/: CMakeLists.txt  filter2D.cpp
imgProc/05/gaussian/: CMakeLists.txt  gaussian.cpp  gaussian_sample.cpp
imgProc/05/kadai1/: 05_01_filter_k23023.cpp  CMakeLists.txt
imgProc/05/kadai2_challenge1/: 05_02_denoising_k23023.cpp  CMakeLists.txt
imgProc/05/kadai3_challenge2/: 05_03_myfilter_k23023.cpp  CMakeLists.txt
imgProc/06/filter2D/: filter2D.cpp
imgProc/06/kadai1/: 06_01_GS_k23023.cpp  CMakeLists.txt
imgProc/06/sobel/: CMakeLists.txt  sobel.cpp
imgProc/07/alpha/: CMakeLists.txt  alpha.cpp
imgProc/07/grayscaleSub/: CMakeLists.txt  grayscaleSub.cpp
imgProc/07/kadai1/: 07_k23023.cpp  CMakeLists.txt
imgProc/07/median/: CMakeLists.txt  median.cpp
imgProc/08/challenge_kadai/: 08_02_challenge_k23023.cpp  CMakeLists.txt
imgProc/08/fixTh/: CMakeLists.txt  fixTh.cpp
imgProc/08/fixThOpenCV/: CMakeLists.txt  fixThOpenCV.cpp
imgProc/08/kadai1/: 08_01_ptile_k23023.cpp  CMakeLists.txt
imgProc/08/otsu/: CMakeLists.txt  otsu.cpp
imgProc/09/challenge_kadai/: 09_02_rectangle_k23023.cpp  CMakeLists.txt
imgProc/09/contour2/: CMakeLists.txt  contour2.cpp
imgProc/09/contour4student/: CMakeLists.txt  contour4student.cpp
imgProc/09/kadai1/: 09_01_bigcircle_k23023.cpp  CMakeLists.txt
imgProc/10/kadai1/: 10_k23023.cpp  CMakeLists.txt
imgProc/10/kadai_challenge/: 10_k23023egg.cpp  10_k23023egg.txt  CMakeLists.txt
imgProc/10/labeling/: CMakeLists.txt  labeling.cpp
imgProc/10/morphology/: CMakeLists.txt  morphology.cpp
imgProc/11/changeColor/: CMakeLists.txt  changeColor4student.cpp
imgProc/11/colorBar/: CMakeLists.txt  colorBar4student.cpp
imgProc/11/extractRegion/: extractRegion4student.cpp
imgProc/11/extractRegionHsv/: CMakeLists.txt  extractRegion4student.cpp
imgProc/11/kadai1/: 11_01_hand_k23023.cpp  CMakeLists.txt
imgProc/11/kadai2/: 11_02_fruit_k23023.cpp  CMakeLists.txt
imgProc/12/kadai1/: 12_01_k23023.cpp  CMakeLists.txt
imgProc/12/kadai2/: 12_02_k23023.cpp  CMakeLists.txt
imgProc/12/search_worry/: CMakeLists.txt  main.cpp
imgProc/13/02/: 02-2.cpp  02-2.md
imgProc/13/03/: 03-1.cpp  03-1.md  03-2.cpp  03-2.md
imgProc/13/04/: 04-1.cpp  04-1.md  04-2.cpp  04-2.md
imgProc/13/05/: 05-1.cpp  05-1.md
imgProc/13/06/: 06-1.cpp  06-1.md
imgProc/13/07/: 07-1.cpp  07-1.md
imgProc/13/08/: 08-1.cpp  08-1.md
imgProc/14/gem_binarize/: CMakeLists.txt  gem_binarize.cpp
imgProc/14/gem_color/: CMakeLists.txt  gem_color.cpp
imgProc/14/gem_count_black/: CMakeLists.txt  gem_count_black.cpp
imgProc/14/gem_edge/: CMakeLists.txt  gem_edge.cpp
imgProc/14/gem_hist/: CMakeLists.txt  gem_hist.cpp
imgProc/14/gem_hsv/: CMakeLists.txt  gem_hsv.cpp
imgProc/14/gem_template/: CMakeLists.txt  gem_template.cpp
imgProc/14/kadai/: 14_01_k23023.cpp  CMakeLists.txt
imgProc/final_kadai/: matomeru.sh
imgProc/final_kadai/kadai1/: CMakeLists.txt  issue1_k23023.cpp
imgProc/final_kadai/kadai2/: CMakeLists.txt  issue2_k23023.cpp
imgProc/final_kadai/kadai3/: CMakeLists.txt  issue3_k23023.cpp
imgProc/final_kadai/kadai4/: CMakeLists.txt  issue4_k23023.cpp
imgProc/final_kadai/kadai5/: CMakeLists.txt  issue5_k23023.cpp
imgProc/final_kadai/kadai6/: CMakeLists.txt  issue6_k23023.cpp
imgProc/第3回/grayImg/: CMakeLists.txt  grayImg.cpp
imgProc/第3回/kadai1/: 03_01_negaposi_k23023.cpp  CMakeLists.txt
imgProc/第4回/contrast/: CMakeLists.txt
js/: auto_maze.html  binarization.html  color_quiz.html  hakoiri_musume.html  hanoi.html  hit-and-blow.html  lightsout.html  lip_sync2.html  race3d.html  ray_tracing.html  voice_timer.html
js/03/: 05-use_const_value.js  06-const_reassignment.js
js/04/: 02-number_typeof.js  03-string_typeof.js  11-number.js  12-number_with_quotation.js  13-addition.js  14-calculate.js  17-compare.js  20-string_basic.js  25-use_enter.js  29-string_operator_backslash_n.js  31-variable_in_template_literal.js  32-enter_in_template_literal.js
js/05/: 08-pop.js  09-includes.js  10-join.js  11-split.js
js/06/: 01-if_example.js  02-if_strict_rule.js  03-else_if.js
js/07/: 01-for.js  02-for_hello.js  03-while_example.js  04-for_array.js  05-for_array2.js  06-for_of.js  07-if_break.js
js/08/: 01-function.js  02-function_with_argument.js  03-pi.js  04-double.js  05-sum.js  06-default_args1.js  07-default_args2.js  08-function_expression.js  09-scope.js
js/09/: 01-object.js  03-properties.js  04-properties_undefined.js  05-properties_update.js  07-object_person.js  08-object_person_method.js  09-object_person_this_ng.js  10-object_person_this_ok.js  11-object_person_this_update.js
js/10/: 05-dice.js  08-date_methods.js  09-show_date.js
js/11/: css_link.html  form.html  index_add_style.html  link.html
js/12/: 03-confirm_if.js  04-set_timeout.js  05-clear_timeout.js  06-set_interval.js  07-clear_interval.js  08-open.js  09-close.js  10-location.js
js/15/: async_alert.js  await.html  fetch.html  sample.json  sync_alert.js
js/16/: countup.html
js/16checktest/: countup.html  memo.html  scroll.html
js/final_kadai/: index.css  index.html  index.js
oop2_python_kougi/01/: lecture01_01.py  lecture01_02.py  参考用.py
oop2_python_kougi/02/: csvread参考用.py  lecture02_01.py  lecture02_01_printHeroStatus.py  lecture02_02.py  lecture02_Hero.csv  lecture02_data.xml  lecture02_data_with_namespace.xml  xml_read参考用.py
prg1K/final_kadai/: 15_issue_k23023.c  README.txt  data.csv  main.c
prg1K/prg1/: Makefile  check.sh  make_zip.py  雛形.c
prg1K/prg1/6/: 06_01_if.c  (+11 more)
(+235 files in other folders)
